Updated open/close animation of the subpages' internal nav menu on small screen sizes to work correctly with visibility and height.

--- a/css/subpages/style.css
+++ b/css/subpages/style.css
@@ -760,11 +760,6 @@
 				-ms-transform: perspective(365px) rotateX(-90deg);
 				 -o-transform: perspective(365px) rotateX(-90deg);
 						transform: perspective(365px) rotateX(-90deg);
-		-webkit-transition: all 0.1s linear 0s;
-			 -moz-transition: all 0.1s linear 0s;
-				-ms-transition: all 0.1s linear 0s;
-				 -o-transition: all 0.1s linear 0s;
-						transition: all 0.1s linear 0s;
 	}
 
 	.narrowWidthSubpageNav .subpageNavListItem {
@@ -775,59 +770,59 @@
 				-ms-transform: perspective(365px) rotateX(0deg);
 				 -o-transform: perspective(365px) rotateX(0deg);
 						transform: perspective(365px) rotateX(0deg);
-		-webkit-transition: all 0.15s linear 0s;
-			 -moz-transition: all 0.15s linear 0s;
-				-ms-transition: all 0.15s linear 0s;
-				 -o-transition: all 0.15s linear 0s;
-						transition: all 0.15s linear 0s;
+		-webkit-transition: -webkit-transform 0.15s linear 0s, height 0s 0s, visibility 0s 0s;
+			 -moz-transition: -moz-transform 0.15s linear 0s, height 0s 0s, visibility 0s 0s;
+				-ms-transition: -ms-transform 0.15s linear 0s, height 0s 0s, visibility 0s 0s;
+				 -o-transition: -o-transform 0.15s linear 0s, height 0s 0s, visibility 0s 0s;
+						transition: transform 0.15s linear 0s, height 0s 0s, visibility 0s 0s;
 	}
 
 	.subpageNavListItem:nth-child(1) {
-		-webkit-transition-delay: 0.5s;
-			 -moz-transition-delay: 0.5s;
-				-ms-transition-delay: 0.5s;
-				 -o-transition-delay: 0.5s;
-						transition-delay: 0.5s;
+		-webkit-transition: -webkit-transform 0.1s linear 0.5s, height 0s 0.6s, visibility 0s 0.6s;
+			 -moz-transition: -moz-transform 0.1s linear 0.5s, height 0s 0.6s, visibility 0s 0.6s;
+				-ms-transition: -ms-transform 0.1s linear 0.5s, height 0s 0.6s, visibility 0s 0.6s;
+				 -o-transition: -o-transform 0.1s linear 0.5s, height 0s 0.6s, visibility 0s 0.6s;
+						transition: transform 0.1s linear 0.5s, height 0s 0.6s, visibility 0s 0.6s;
 	}
 
 	.subpageNavListItem:nth-child(2) {
-		-webkit-transition-delay: 0.4s;
-			 -moz-transition-delay: 0.4s;
-				-ms-transition-delay: 0.4s;
-				 -o-transition-delay: 0.4s;
-						transition-delay: 0.4s;
+		-webkit-transition: -webkit-transform 0.1s linear 0.4s, height 0s 0.5s, visibility 0s 0.5s;
+			 -moz-transition: -moz-transform 0.1s linear 0.4s, height 0s 0.5s, visibility 0s 0.5s;
+				-ms-transition: -ms-transform 0.1s linear 0.4s, height 0s 0.5s, visibility 0s 0.5s;
+				 -o-transition: -o-transform 0.1s linear 0.4s, height 0s 0.5s, visibility 0s 0.5s;
+						transition: transform 0.1s linear 0.4s, height 0s 0.5s, visibility 0s 0.5s;
 	}
 
 	.subpageNavListItem:nth-child(3) {
-		-webkit-transition-delay: 0.3s;
-			 -moz-transition-delay: 0.3s;
-				-ms-transition-delay: 0.3s;
-				 -o-transition-delay: 0.3s;
-						transition-delay: 0.3s;
+		-webkit-transition: -webkit-transform 0.1s linear 0.3s, height 0s 0.4s, visibility 0s 0.4s;
+			 -moz-transition: -moz-transform 0.1s linear 0.3s, height 0s 0.4s, visibility 0s 0.4s;
+				-ms-transition: -ms-transform 0.1s linear 0.3s, height 0s 0.4s, visibility 0s 0.4s;
+				 -o-transition: -o-transform 0.1s linear 0.3s, height 0s 0.4s, visibility 0s 0.4s;
+						transition: transform 0.1s linear 0.3s, height 0s 0.4s, visibility 0s 0.4s;
 	}
 
 	.subpageNavListItem:nth-child(4) {
-		-webkit-transition-delay: 0.2s;
-			 -moz-transition-delay: 0.2s;
-				-ms-transition-delay: 0.2s;
-				 -o-transition-delay: 0.2s;
-						transition-delay: 0.2s;
+		-webkit-transition: -webkit-transform 0.1s linear 0.2s, height 0s 0.3s, visibility 0s 0.3s;
+			 -moz-transition: -moz-transform 0.1s linear 0.2s, height 0s 0.3s, visibility 0s 0.3s;
+				-ms-transition: -ms-transform 0.1s linear 0.2s, height 0s 0.3s, visibility 0s 0.3s;
+				 -o-transition: -o-transform 0.1s linear 0.2s, height 0s 0.3s, visibility 0s 0.3s;
+						transition: transform 0.1s linear 0.2s, height 0s 0.3s, visibility 0s 0.3s;
 	}
 
 	.subpageNavListItem:nth-child(5) {
-		-webkit-transition-delay: 0.1s;
-			 -moz-transition-delay: 0.1s;
-				-ms-transition-delay: 0.1s;
-				 -o-transition-delay: 0.1s;
-						transition-delay: 0.1s;
+		-webkit-transition: -webkit-transform 0.1s linear 0.1s, height 0s 0.2s, visibility 0s 0.2s;
+			 -moz-transition: -moz-transform 0.1s linear 0.1s, height 0s 0.2s, visibility 0s 0.2s;
+				-ms-transition: -ms-transform 0.1s linear 0.1s, height 0s 0.2s, visibility 0s 0.2s;
+				 -o-transition: -o-transform 0.1s linear 0.1s, height 0s 0.2s, visibility 0s 0.2s;
+						transition: transform 0.1s linear 0.1s, height 0s 0.2s, visibility 0s 0.2s;
 	}
 
 	.subpageNavListItem:nth-child(6) {
-		-webkit-transition-delay: 0s;
-			 -moz-transition-delay: 0s;
-				-ms-transition-delay: 0s;
-				 -o-transition-delay: 0s;
-						transition-delay: 0s;
+		-webkit-transition: -webkit-transform 0.1s linear 0s, height 0s 0.1s, visibility 0s 0.1s;
+			 -moz-transition: -moz-transform 0.1s linear 0s, height 0s 0.1s, visibility 0s 0.1s;
+				-ms-transition: -ms-transform 0.1s linear 0s, height 0s 0.1s, visibility 0s 0.1s;
+				 -o-transition: -o-transform 0.1s linear 0s, height 0s 0.1s, visibility 0s 0.1s;
+						transition: transform 0.1s linear 0s, height 0s 0.1s, visibility 0s 0.1s;
 	}
 
 	.narrowWidthSubpageNav .subpageNavListItem:nth-child(1) {
